--- a/shared/jit-rbac/pre-hook.yaml
+++ b/shared/jit-rbac/pre-hook.yaml
@@ -1,38 +1,38 @@
-apiVersion: batch/v1
-kind: Job
-metadata:
-  name: cleanup-old-rbac
-  namespace: kube-system
-  annotations:
-    argocd.argoproj.io/hook: PreSync
-    argocd.argoproj.io/hook-delete-policy: HookSucceeded,HookFailed
-    argocd.argoproj.io/sync-wave: "-4"
-  labels:
-    app.kubernetes.io/part-of: argo-jit-rbac
-    jit-rbac/global-cleanup: "true"
-spec:
-  backoffLimit: 0
-  ttlSecondsAfterFinished: 60
-  template:
-    metadata:
-      labels:
-        app.kubernetes.io/part-of: argo-jit-rbac
-    spec:
-      serviceAccountName: argocd-manager
-      restartPolicy: Never
-      containers:
-      - name: cleanup-old-rbac
-        image: bitnami/kubectl:latest
-        imagePullPolicy: IfNotPresent
-        command: ["/bin/sh", "-c"]
-        args:
-          - |
-            set -u
-            echo "Starting cleanup of old RBAC resources at $(date -u +%FT%TZ)";
-            kubectl delete clusterrolebinding argocd-manager-role-binding --ignore-not-found=true 2>/dev/null || true;
-            kubectl delete clusterrole argocd-manager-role --ignore-not-found=true 2>/dev/null || true;
-            echo "Cleanup of old RBAC resources completed at $(date -u +%FT%TZ)";
----
+# apiVersion: batch/v1
+# kind: Job
+# metadata:
+#   name: cleanup-old-rbac
+#   namespace: kube-system
+#   annotations:
+#     argocd.argoproj.io/hook: PreSync
+#     argocd.argoproj.io/hook-delete-policy: HookSucceeded,HookFailed
+#     argocd.argoproj.io/sync-wave: "-4"
+#   labels:
+#     app.kubernetes.io/part-of: argo-jit-rbac
+#     jit-rbac/global-cleanup: "true"
+# spec:
+#   backoffLimit: 0
+#   ttlSecondsAfterFinished: 60
+#   template:
+#     metadata:
+#       labels:
+#         app.kubernetes.io/part-of: argo-jit-rbac
+#     spec:
+#       serviceAccountName: argocd-manager
+#       restartPolicy: Never
+#       containers:
+#       - name: cleanup-old-rbac
+#         image: bitnami/kubectl:latest
+#         imagePullPolicy: IfNotPresent
+#         command: ["/bin/sh", "-c"]
+#         args:
+#           - |
+#             set -u
+#             echo "Starting cleanup of old RBAC resources at $(date -u +%FT%TZ)";
+#             kubectl delete clusterrolebinding argocd-manager-role-binding --ignore-not-found=true 2>/dev/null || true;
+#             kubectl delete clusterrole argocd-manager-role --ignore-not-found=true 2>/dev/null || true;
+#             echo "Cleanup of old RBAC resources completed at $(date -u +%FT%TZ)";
+# ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
