--- a/shared/jit-rbac/pre-hook.yaml
+++ b/shared/jit-rbac/pre-hook.yaml
@@ -49,7 +49,7 @@ rules: []
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: ROLE_NAME_PLACEHOLDER-install
+  name: ROLE_NAME_PLACEHOLDER
   annotations:
     argocd.argoproj.io/sync-wave: "-2"
   labels:
