--- a/clusters/test2/infr-apps/certmanager.yaml
+++ b/clusters/test2/infr-apps/certmanager.yaml
@@ -30,6 +30,12 @@ spec:
               - op: replace
                 path: /metadata/name
                 value: k8s-spb2-backend2-certmanager-cleanup-cron
+              - op: replace
+                path: /spec/jobTemplate/spec/template/spec/containers/0/env/0/value
+                value: k8s-spb2-backend2-certmanager
+              - op: replace
+                path: /spec/jobTemplate/spec/template/spec/containers/0/env/1/value
+                value: k8s-spb2-backend2-certmanager-cleanup-cron
           - target:
               kind: ClusterRole
             patch: |-
@@ -51,6 +57,9 @@ spec:
               - op: replace
                 path: /metadata/name
                 value: k8s-spb2-backend2-certmanager-cleanup
+              - op: replace
+                path: /spec/template/spec/containers/0/env/0/value
+                value: k8s-spb2-backend2-certmanager
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
       path: shared/jit-rbac-roles
