--- a/clusters/test3/infr-apps/certmanager.yaml
+++ b/clusters/test3/infr-apps/certmanager.yaml
@@ -26,6 +26,7 @@ spec:
         patches:
           - target:
               kind: ClusterRole
+              annotationSelector: argocd.argoproj.io/hook=PreSync
             patch: |-
               - op: replace
                 path: /metadata/name
